--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -13,20 +13,16 @@
     <title>Terra Ingenieria</title>
     <link rel="stylesheet" type="text/css" href={% static 'css/normalize.css' %}?{% now "U" %}>
     <link rel="icon" href={% static 'favicon.ico' %}>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@300&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/94e05b8032.js" crossorigin="anonymous"></script>
 </head>
-
-<div class="container">
-    {% for message in messages %}
-    <script src="{% static 'alert.js' %}"></script>
-    <p id="messages">{{message}}</p>
-    {% endfor %}
-</div>
 
 {% block content %} {% endblock %}
 
