--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -15,7 +15,7 @@
 		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 	</div>
 	<div class="container-fluid">
-		<div class="row justify-content-center">
+		<div class="row justify-content-center mt-5">
 			<div class="col-9 col-sm-6 col-md-5 col-lg-4 mt-5 mb-5">
 				<form class="form card" action="{% url 'login' %}" method=POST>
 					{% csrf_token %}
