--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-	<div class="alert alert-danger d-flex justify-content-center fade show position-relative" role="alert">
-		{% for message in messages %}
-		<script src="{% static 'alert.js' %}"></script>
-		<p id="messages" class="position-absolute top-0 start-0 translate-middle"></p>{{message}}</p>
-		{% endfor %}
-		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-	</div>
-	<div class="container-fluid">
-		<div class="row justify-content-center mt-5">
-			<div class="col-9 col-sm-6 col-md-5 col-lg-4 mt-5 mb-5">
+	<div class="container">
+		<div class="alert alert-danger d-flex justify-content-center fade show position-relative" role="alert">
+			{% for message in messages %}
+			<script src="{% static 'alert.js' %}"></script>
+			<p id="messages"></p>{{message}}</p>
+			<!-- retocar -->
+			{% endfor %}
+			<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+		</div>
+
+		<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+			<div class="col-9 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5">
 				<form class="form card" action="{% url 'login' %}" method=POST>
 					{% csrf_token %}
 					<img src={% static 'logo.jpg' %} class="card-img-top" alt="...">
