--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -51,7 +51,8 @@
 
 	<section class="flotes">
 		<h2 class="titulo text-center fw-bold">FLOTAS</h2>
-		<div class="container mt-5 mb-3">
+		<div class="container-fluid mt-5 mb-3">
+			<!--	retocar el container-xxl	-->
 			<div class="row justify-content-evenly">
 				{% for key,value in info.items %}
 				<div class="col-12 col-sm-6 col-md-6 col-lg-5 col-xl-4 mt-3 mb-5">
