--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -79,27 +79,32 @@
         </div>
 
     </nav>
-
-    <div class="card mb-3" style="width: 600px;">
-        <!--<img src="{{ flote.img }}" class="card-img-top" alt="...">-->
-        <img src={% static 'cam.png' %} class="card-img-top" alt="...">
-        <div class="card-body">
-            <h5 class="card-title">{{flote.type}}</h5>
-            <ul class="list-group list-group-flush">
-                <li class="list-group-item">{{flote.code}}</li>
-                <li class="list-group-item">{{flote.brand}}</li>
-                <li class="list-group-item">{{flote.characteristics}}</li>
-                <li class="list-group-item">{{flote.patent}}</li>
-                <li class="list-group-item">{{flote.production_year}}</li>
-                <li class="list-group-item">{{flote.engine_number}}</li>
-                <li class="list-group-item">{{flote.chassis_number}}</li>
-                <li class="list-group-item">{{flote.status}}</li>
-                <li class="list-group-item">{{flote.justifyStatus}}</li>
-                <li class="list-group-item">{{flote.operators}}</li>
-            </ul>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+    <div class="container">
+        <div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
+            <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
+                <div class="card h-100">
+                    <!--<img src="{{ flote.img }}" class="card-img-top" alt="...">-->
+                    <img src={% static 'cam.png' %} class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">{{flote.type}}</h5>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">{{flote.code}}</li>
+                            <li class="list-group-item">{{flote.brand}}</li>
+                            <li class="list-group-item">{{flote.characteristics}}</li>
+                            <li class="list-group-item">{{flote.patent}}</li>
+                            <li class="list-group-item">{{flote.production_year}}</li>
+                            <li class="list-group-item">{{flote.engine_number}}</li>
+                            <li class="list-group-item">{{flote.chassis_number}}</li>
+                            <li class="list-group-item">{{flote.status}}</li>
+                            <li class="list-group-item">{{flote.justifyStatus}}</li>
+                            <li class="list-group-item">{{flote.operators}}</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
+
 
 
     {% endblock content %}
