--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -102,15 +102,15 @@
 
 	<section class="flotes">
 		<h2 class="titulo text-center fw-bold">FLOTAS</h2>
-		<div class="container-fluid mt-5 mb-3">
+		<div class="container-fluid text-center mt-5 mb-3 prueba" style="width: 90vw;">
 			<!--	retocar el container-xxl	-->
 			<div class="row justify-content-evenly">
 				{% for key,value in info.items %}
-				<div class="col-12 col-sm-6 col-md-6 col-lg-5 col-xl-4 mt-3 mb-5">
+				<div class="col-12 col-sm-10 col-md-6 col-lg-5 col-xl-4 mt-3 mb-5">
 					<div class="card h-100">
 						<img src={% static value.image_file %}>
 						<div class="card-hover dropdown">
-							<button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+							<button class="btn btn-outline-success-m me-2 btn-lg" type="button" data-bs-toggle="dropdown"
 								aria-expanded="false">
 								{{ key }}
 							</button>
