--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -23,6 +23,19 @@
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/94e05b8032.js" crossorigin="anonymous"></script>
 </head>
+{% if messages %}
+    {% for message in messages %}
+    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center w-100">
+        <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                    <script src="{% static 'alert.js' %}"></script>
+                    <p class="fw-semibold" id="messages"></p>{{message}}</p>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+        </div>
+    </div>
+    {% endfor %}
+{% endif %}
 
 {% block content %} {% endblock %}
 
