--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -72,17 +72,27 @@
             </div>
         </div>
     </nav>
-    <div class="input-group mb-3 flex-container">
-        <form method="post" enctype="multipart/form-data">
-            {% csrf_token %}
 
-            {{ form.as_p }}
-            {{ imageform.management_form}}
-            {% for form in imageform %}
-            {{ form }}
-            {% endfor %} <br>
-            <button type="submit">Upload</button>
-        </form>
+    <div class="container">
+        <div class="d-flex justify-content-center align-items-center">
+            <!--  style="height: 120vh;" comprobar en mi compu-->
+            <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
+                <div class="card">
+                    <div class="card-body">
+                        <form method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+
+                            {{ form.as_p }}
+                            {{ imageform.management_form}}
+                            {% for form in imageform %}
+                            {{ form }}
+                            {% endfor %} <br>
+                            <button type="submit">Upload</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 
