--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -25,7 +25,7 @@
 </head>
 {% if messages %}
     {% for message in messages %}
-    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center w-100">
+    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center w-100" style="z-index: 10000;">
         <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
                     <script src="{% static 'alert.js' %}"></script>
