--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -79,15 +79,25 @@
             <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
                 <div class="card">
                     <div class="card-body">
-                        <form method="post" enctype="multipart/form-data">
+                        <form method="post row" enctype="multipart/form-data">
                             {% csrf_token %}
 
-                            {{ form.as_p }}
-                            {{ imageform.management_form}}
-                            {% for form in imageform %}
-                            {{ form }}
-                            {% endfor %} <br>
-                            <button type="submit">Upload</button>
+                            {% for field in form %}
+                            <label class="col-sm-6 col-form-label" for="{{ field.auto_id }}">{{ field.label }}</label>
+                            <div class="col-sm-10">
+                                {{ field }}
+                            </div>
+                            {% endfor %}
+                            <div class="mt-3">
+                                <label for="formFileMultiple" class="form-label"> Foto de la flota
+                                </label>
+                                {{ imageform.management_form}}
+                                {% for form in imageform %}
+                                {{ form }}
+                                {% endfor %}
+                            </div>
+                            <br>
+                            <button type="submit" value="Ingresar" class="btn btn-outline-dark">Crear</button>
                         </form>
                     </div>
                 </div>
