--- a/backServer/vistas/html/base.html
+++ b/backServer/vistas/html/base.html
@@ -24,17 +24,18 @@
     <script src="https://kit.fontawesome.com/94e05b8032.js" crossorigin="anonymous"></script>
 </head>
 {% if messages %}
-    {% for message in messages %}
-    <div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center w-100" style="z-index: 10000;">
-        <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="toast-header">
-                    <script src="{% static 'alert.js' %}"></script>
-                    <p class="fw-semibold" id="messages"></p>{{message}}</p>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+{% for message in messages %}
+<div aria-live="polite" aria-atomic="true" class="d-flex justify-content-center w-100"
+    style="position: absolute; z-index: 1000;">
+    <div class="alert alert-danger fade show" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <script src="{% static 'alert.js' %}"></script>
+            <p class="fw-semibold" id="messages"></p>{{message}}</p>
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
         </div>
     </div>
-    {% endfor %}
+</div>
+{% endfor %}
 {% endif %}
 
 {% block content %} {% endblock %}
