--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -80,8 +80,7 @@
 
     </nav>
     <div class="container">
-        <div class="d-flex justify-content-center align-items-center">
-            <!--  style="height: 120vh;" comprobar en mi compu-->
+        <div class="d-flex justify-content-center mt-3 mb-3">
             <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
                 <div class="card h-100">
                     <!--<img src="{{ flote.img }}" class="card-img-top" alt="...">-->
