--- a/backServer/vistas/html/ti_ingreso.html
+++ b/backServer/vistas/html/ti_ingreso.html
@@ -9,7 +9,8 @@
 <body>
 	<div class="container">
 		<div class="d-flex justify-content-center align-items-center" style="height: 100vh;">
-			<div class="col-9 col-sm-9 col-md-6 col-lg-6 col-xl-4 col-xxl-5"> <!-- chequear un mi compu -->
+			<div class="col-9 col-sm-9 col-md-6 col-lg-6 col-xl-4 col-xxl-5">
+				<!-- chequear un mi compu -->
 				<form class="form card" action="{% url 'login' %}" method=POST>
 					{% csrf_token %}
 					<img src={% static 'logo.jpg' %} class="card-img-top" alt="...">
