--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-	<nav class="navbar sticky-top">
+	<nav class="navbar sticky-top" style="z-index: 100;">
 		<div class="container-fluid no-responsive">
 			<div class="navbar-brand">
 				<img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
@@ -104,8 +104,8 @@
 					<div class="card h-100">
 						<img src={% static value.image_file %}>
 						<div class="card-hover dropdown">
-							<button class="btn btn-outline-success-m me-2 btn-lg" type="button" data-bs-toggle="dropdown"
-								aria-expanded="false">
+							<button class="btn btn-outline-success-m me-2 btn-lg" type="button"
+								data-bs-toggle="dropdown" aria-expanded="false">
 								{{ key }}
 							</button>
 							<ul class="dropdown-menu">
