--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -83,8 +83,8 @@
         <div class="d-flex justify-content-center mt-3 mb-3">
             <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
                 <div class="card h-100">
-                    <!--<img src="{{ flote.img }}" class="card-img-top" alt="...">-->
-                    <img src={% static 'cam.png' %} class="card-img-top" alt="...">
+                    <img src="{{ flote.img }}" class="card-img-top" alt="...">
+                    <!-- <img src={% static 'cam.png' %} class="card-img-top" alt="..."> -->
                     <div class="card-body">
                         <h5 class="card-title">{{flote.type}}</h5>
                         <ul class="list-group list-group-flush">
