--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -14,14 +14,6 @@
                     class="d-inline-block align-text-top">
             </div>
             <ul class="nav justify-content-end">
-                <li class="nav-item search">
-                    <form class="d-flex" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
-                        <button class="btn btn-outline-success" type="submit">
-                            <i class="fa-solid fa-magnifying-glass"></i>
-                        </button>
-                    </form>
-                </li>
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
                 </li>
@@ -57,15 +49,6 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                            <li class="nav-item search">
-                                <form class="d-flex mt-3 mb-2" role="search">
-                                    <input class="form-control me-2" type="search" placeholder="Buscador"
-                                        aria-label="Buscador">
-                                    <button class="btn btn-outline-success" type="submit">
-                                        <i class="fa-solid fa-magnifying-glass"></i>
-                                    </button>
-                                </form>
-                            </li>
                             <li class="nav-item mt-3">
                                 <a class="nav-link active" href="/flotes/add">Agregar flota</a>
                             </li>
@@ -77,14 +60,27 @@
                 </div>
             </div>
         </div>
-
     </nav>
+
     <div class="container">
         <div class="d-flex justify-content-center mt-3 mb-3">
             <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
                 <div class="card h-100">
-                    <img src="{{ flote.img }}" class="card-img-top" alt="...">
-                    <!-- <img src={% static 'cam.png' %} class="card-img-top" alt="..."> -->
+                    <div id="carouselExampleFade" class="carousel slide carousel-dark carousel-fade" data-bs-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <img src="{{ flote.img }}" class="card-img-top" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                      </button>
+                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                      </button>
                     <div class="card-body">
                         <h5 class="card-title">{{flote.type}}</h5>
                         <ul class="list-group list-group-flush">
@@ -104,7 +100,5 @@
             </div>
         </div>
     </div>
-
-
-
+</body>
     {% endblock content %}
