--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -15,8 +15,9 @@
 			</div>
 			<ul class="nav justify-content-end">
 				<li class="nav-item search">
-					<form class="d-flex" role="search">
-						<input class="form-control me-2" type="search" placeholder="Buscador" aria-label="Buscador">
+					<form method="post" class="d-flex" enctype="multipart/form-data">
+						{% csrf_token %}
+						<input class="form-control me-2" name="code" id="search" type="search" placeholder="Buscador" aria-label="Buscador">
 						<button class="btn btn-outline-success" type="submit">
 							<i class="fa-solid fa-magnifying-glass"></i>
 						</button>
