--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -80,7 +80,7 @@
                                 </div>
                                 {% endfor %}
                             </div>
-                            <button type="submit" class="btn btn-outline-dark mt-3">Crear</button>
+                            <button type="submit" class="btn btn-outline-dark mt-3 float-end">Crear</button>
                         </form>
                     </div>
                 </div>
