--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -66,24 +66,27 @@
         <div class="d-flex justify-content-center mt-3 mb-3">
             <div class="col-12 col-sm-8 col-md-6 col-lg-6 col-xl-5 col-xxl-5 mt-3 mb-3">
                 <div class="card h-100">
-                    <div id="carouselExampleFade" class="carousel slide carousel-dark carousel-fade" data-bs-ride="carousel">
+                    <div id="carouselExampleFade" class="carousel slide carousel-dark carousel-fade"
+                        data-bs-ride="carousel">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
                                 <img src="{{ flote.img }}" class="card-img-top" alt="...">
                             </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade"
+                            data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade"
+                            data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
                     <div class="card-body">
-                        <h5 class="card-title">{{flote.type}}</h5>
-                        <ul class="list-group list-group-flush">
+                        <h5 class="card-title text-center">{{flote.type}}</h5>
+                        <ul class="list-group list-group-flush text-center">
                             <li class="list-group-item">{{flote.code}}</li>
                             <li class="list-group-item">{{flote.brand}}</li>
                             <li class="list-group-item">{{flote.characteristics}}</li>
@@ -101,4 +104,4 @@
         </div>
     </div>
 </body>
-    {% endblock content %}
+{% endblock content %}
