retoques de de retoques

--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -15,6 +15,9 @@
             </div>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
+                    <a class="btn btn-outline-success me-2" href="add_repair/{{ flote.code }}" role="button">Mantenimiento de {{ flote.code }}</a>
+                </li>
+                <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
                 </li>
                 <li class="nav-item">
