--- a/backServer/vistas/html/ti_vista-flota.html
+++ b/backServer/vistas/html/ti_vista-flota.html
@@ -9,10 +9,10 @@
 <body>
 	<nav class="navbar sticky-top" style="z-index: 100;">
 		<div class="container-fluid no-responsive">
-			<div class="navbar-brand">
+			<a class="navbar-brand" href="../flotes">
 				<img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
 					class="d-inline-block align-text-top">
-			</div>
+			</a>
 			<ul class="nav justify-content-end">
 				<li class="nav-item search">
 					<form method="post" class="d-flex" enctype="multipart/form-data">
@@ -33,10 +33,10 @@
 			</ul>
 		</div>
 		<div class="container-fluid responsive">
-			<div class="navbar-brand">
+			<a class="navbar-brand" href="../flotes">
 				<img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
 					class="d-inline-block align-text-top">
-			</div>
+			</a>
 			<button class="responsive float-end btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
 				data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
 				<i class="fa-solid fa-bars"></i>
