--- a/backServer/vistas/html/add_flote.html
+++ b/backServer/vistas/html/add_flote.html
@@ -6,30 +6,35 @@
     <link rel="stylesheet" type="text/css" href={% static 'css/add_flote.css' %}?{% now "U" %}>
 </head>
 
-<body>  
+<body>
     <nav class="navbar sticky-top">
         <div class="container-fluid no-responsive">
-            <div class="navbar-brand">
+            <a class="navbar-brand" href="/home/flotes">
                 <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
-            </div>
+            </a>
             <ul class="nav justify-content-end">
-                <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="/home/flotes" role="button">Volver</a>
-                </li>
+                <li class="nav-item search">
+					<form method="post" class="d-flex" enctype="multipart/form-data"> <!-- Arreglar, no busca -->
+						{% csrf_token %}
+						<input class="form-control me-2" name="code" id="search" type="search" placeholder="Buscador"
+							aria-label="Buscador">
+						<button class="btn btn-outline-success" type="submit">
+							<i class="fa-solid fa-magnifying-glass"></i>
+						</button>
+					</form>
+				</li>
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
                 </li>
             </ul>
         </div>
         <div class="container-fluid responsive">
-            <div class="navbar-brand">
+            <a class="navbar-brand" href="../flotes">
                 <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
-            </div>
+            </a>
             <div class="nav justify-content-end">
-                <a class="nav-item btn btn-outline-success me-2" href="/home/flotes" role="button">
-                    <i class="fa-solid fa-arrow-left"></i></a>
                 <button class="nav-item btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <i class="fa-solid fa-bars"></i>
@@ -43,6 +48,16 @@
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                            <li class="nav-item search">
+                                <form method="post" class="d-flex" enctype="multipart/form-data"> <!-- Arreglar -->
+                                    {% csrf_token %}
+                                    <input class="form-control me-2" name="code" id="search" type="search" placeholder="Buscador"
+                                        aria-label="Buscador">
+                                    <button class="btn btn-outline-success" type="submit">
+                                        <i class="fa-solid fa-magnifying-glass"></i>
+                                    </button>
+                                </form>
+                            </li>
                             <li class="nav-item mt-3">
                                 <a class="nav-link active" href="/logout">Cerrar Sesión</a>
                             </li>
