--- a/backServer/vistas/html/flota.html
+++ b/backServer/vistas/html/flota.html
@@ -9,20 +9,21 @@
 <body>
     <nav class="navbar sticky-top">
         <div class="container-fluid no-responsive">
-            <div class="navbar-brand">
+            <a class="navbar-brand" href="../flotes">
                 <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
-            </div>
+            </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" href="add_repair/{{ flote.code }}"
                         role="button">Mantenimiento de {{ flote.code }}</a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
+                    <a class="btn btn-outline-success me-2" href="../repair/{{ flote.code }}" role="button">Historial
+                        de {{ flote.code }}</a> <!-- Arreglar -->
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="../flotes" role="button">Volver</a>
+                    <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
@@ -30,13 +31,11 @@
             </ul>
         </div>
         <div class="container-fluid responsive">
-            <div class="navbar-brand">
+            <a class="navbar-brand" href="../flotes">
                 <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
-            </div>
+            </a>
             <div class="nav justify-content-end">
-                <a class="nav-item btn btn-outline-success me-2" href="/home/flotes" role="button">
-                    <i class="fa-solid fa-arrow-left"></i></a>
                 <button class="nav-item btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <i class="fa-solid fa-bars"></i>
@@ -53,6 +52,10 @@
                             <li class="nav-item mt-3">
                                 <a class="nav-link active" href="add_repair/{{ flote.code }}"
                                     role="button">Mantenimiento de {{ flote.code }}</a>
+                            </li>
+                            <li class="nav-item mt-3">
+                                <a class="nav-link active" href="../repair/{{ flote.code }}" role="button">Historial
+                                    de {{ flote.code }}</a> <!-- Arreglar -->
                             </li>
                             <li class="nav-item mt-3">
                                 <a class="nav-link active" href="/flotes/add">Agregar flota</a>
@@ -92,7 +95,7 @@
                     <div class="card-body" style="width: 100%;">
                         <div class="card-title">
                             <h5 class="text-center">{{flote.type}}</h5>
-                            <div id="container" class="text-end">
+                            <div id="container" class="text-end"> <!-- Hacer que lo editado quede guardado en la base de datos -->
                                 <button type="submit" id="edit-button" class="btn btn-outline-dark btn-sm">
                                     <i class="fa-solid fa-pen-to-square"></i>
                                 </button>
