--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -9,16 +9,17 @@
 <body>
     <nav class="navbar sticky-top">
         <div class="container-fluid no-responsive">
-            <div class="navbar-brand">
+            <a class="navbar-brand" href="../flotes">
                 <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
-            </div>
+            </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
+                    <a class="nav-item btn btn-outline-success me-2" href="../add_repair/{{ code }}" role="button">
+                        <i class="fa-solid fa-arrow-left"></i></a>
                 </li>
                 <li class="nav-item">
-                    <a class="btn btn-outline-success me-2" href="../add_repair/{{ code }}" role="button">Volver</a>
+                    <a class="btn btn-outline-success me-2" href="/flotes/add" role="button">Agregar flota</a>
                 </li>
                 <li class="nav-item">
                     <a class="btn btn-outline-success me-2" type="button" href="/logout" role="button">Cerrar Sesión</a>
@@ -26,12 +27,12 @@
             </ul>
         </div>
         <div class="container-fluid responsive">
-            <div class="navbar-brand">
+            <a class="navbar-brand" href="../flotes">
                 <img src={% static 'logo-nav.png' %} alt="Logo" width="120" height="50"
                     class="d-inline-block align-text-top">
-            </div>
+            </a>
             <div class="nav justify-content-end">
-                <a class="nav-item btn btn-outline-success me-2" href="/home/flotes" role="button">
+                <a class="nav-item btn btn-outline-success me-2" href="../add_repair/{{ code }}" role="button">
                     <i class="fa-solid fa-arrow-left"></i></a>
                 <button class="nav-item btn btn-outline-success me-2" type="button" data-bs-toggle="offcanvas"
                     data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
