--- a/backServer/vistas/html/maintenance_history.html
+++ b/backServer/vistas/html/maintenance_history.html
@@ -15,7 +15,7 @@
             </a>
             <ul class="nav justify-content-end">
                 <li class="nav-item">
-                    <a class="nav-item btn btn-outline-success me-2" href="../add_repair/{{ code }}" role="button">
+                    <a class="nav-item btn btn-outline-success me-2" href="../{{ code }}" role="button">
                         <i class="fa-solid fa-arrow-left"></i></a>
                 </li>
                 <li class="nav-item">
